--- a/Product.html
+++ b/Product.html
@@ -14,8 +14,7 @@
 	<link rel="stylesheet" href="assets/font/themify-icons/themify-icons.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@600&family=Roboto+Slab:wght@700&display=swap"
-		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -274,7 +273,6 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 												58.000đ</div>
 											<div class="item-add-button">
 												Thêm vào giỏ
-												hàng
 											</div>
 										</div>
 									</div>
@@ -304,7 +302,6 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 												58.000đ</div>
 											<div class="item-add-button">
 												Thêm vào giỏ
-												hàng
 											</div>
 										</div>
 									</div>
@@ -334,7 +331,6 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 												58.000đ</div>
 											<div class="item-add-button">
 												Thêm vào giỏ
-												hàng
 											</div>
 										</div>
 									</div>
@@ -364,7 +360,6 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 												58.000đ</div>
 											<div class="item-add-button">
 												Thêm vào giỏ
-												hàng
 											</div>
 										</div>
 									</div>
@@ -394,7 +389,6 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 												58.000đ</div>
 											<div class="item-add-button">
 												Thêm vào giỏ
-												hàng
 											</div>
 										</div>
 									</div>
@@ -426,7 +420,7 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -447,7 +441,7 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 							<div class="item-info">
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -468,7 +462,7 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -489,7 +483,7 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -510,7 +504,7 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -530,8 +524,8 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 							<div class="item-info">
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
-									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-price">11.158.000đ</div>
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
