--- a/ProductPage.html
+++ b/ProductPage.html
@@ -14,8 +14,7 @@
 	<link rel="stylesheet" href="assets/font/themify-icons/themify-icons.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@600&family=Roboto+Slab:wght@700&display=swap"
-		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
 		integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
 		crossorigin="anonymous" />
@@ -88,7 +87,7 @@
 									<div class="item-content-section">
 										<div class="item-price">58.000đ</div>
 										<div class="item-add-button">Thêm vào
-											giỏ hàng
+											giỏ
 										</div>
 									</div>
 								</div>
@@ -112,7 +111,7 @@
 									<div class="item-content-section">
 										<div class="item-price">58.000đ</div>
 										<div class="item-add-button">Thêm vào
-											giỏ hàng
+											giỏ
 										</div>
 									</div>
 								</div>
@@ -136,7 +135,31 @@
 									<div class="item-content-section">
 										<div class="item-price">58.000đ</div>
 										<div class="item-add-button">Thêm vào
-											giỏ hàng
+											giỏ
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</a>
+					<a href="#" class="item item-col-2">
+						<div class="item-container">
+							<div class="item-image">
+								<img src="assets/photo/portfolio.png" alt=""
+									class="item-img">
+							</div>
+							<div class="item-content">
+								<h2 class="item-name">Áo thun nam chất lượng cao nhập
+									khẩu chính
+									hãng
+								</h2>
+								<div class="item-old-price">106.000đ</div>
+								<div class="item-info">
+									<div class="item-discount">50% giảm</div>
+									<div class="item-content-section">
+										<div class="item-price">11.058.000đ</div>
+										<div class="item-add-button">Thêm vào
+											giỏ
 										</div>
 									</div>
 								</div>
@@ -160,7 +183,7 @@
 									<div class="item-content-section">
 										<div class="item-price">58.000đ</div>
 										<div class="item-add-button">Thêm vào
-											giỏ hàng
+											giỏ
 										</div>
 									</div>
 								</div>
@@ -184,31 +207,7 @@
 									<div class="item-content-section">
 										<div class="item-price">58.000đ</div>
 										<div class="item-add-button">Thêm vào
-											giỏ hàng
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</a>
-					<a href="#" class="item item-col-2">
-						<div class="item-container">
-							<div class="item-image">
-								<img src="assets/photo/portfolio.png" alt=""
-									class="item-img">
-							</div>
-							<div class="item-content">
-								<h2 class="item-name">Áo thun nam chất lượng cao nhập
-									khẩu chính
-									hãng
-								</h2>
-								<div class="item-old-price">106.000đ</div>
-								<div class="item-info">
-									<div class="item-discount">50% giảm</div>
-									<div class="item-content-section">
-										<div class="item-price">58.000đ</div>
-										<div class="item-add-button">Thêm vào
-											giỏ hàng
+											giỏ
 										</div>
 									</div>
 								</div>
@@ -297,7 +296,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -328,7 +326,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -358,7 +355,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -388,7 +384,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -418,7 +413,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -458,7 +452,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -489,7 +482,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -519,7 +511,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -549,7 +540,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -579,7 +569,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -618,7 +607,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -649,7 +637,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -679,7 +666,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -709,7 +695,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -739,7 +724,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -778,7 +762,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -808,7 +791,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -838,7 +820,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -868,7 +849,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
@@ -898,7 +878,6 @@
 												<div
 													class="item-add-button">
 													Thêm vào giỏ
-													hàng
 												</div>
 											</div>
 										</div>
