--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="assets/font/themify-icons/themify-icons.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
@@ -200,7 +200,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -221,7 +221,7 @@
 							<div class="item-info">
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -242,7 +242,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -263,7 +263,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -284,7 +284,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -305,7 +305,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -336,7 +336,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -357,7 +357,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -378,7 +378,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -399,7 +399,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -420,7 +420,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -441,7 +441,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -481,7 +481,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -502,7 +502,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -523,7 +523,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -544,7 +544,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -565,7 +565,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -586,7 +586,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -615,7 +615,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -636,7 +636,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -657,7 +657,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -678,7 +678,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -699,7 +699,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -720,7 +720,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -759,7 +759,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -780,7 +780,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -801,7 +801,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -822,7 +822,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -843,7 +843,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -864,7 +864,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -894,7 +894,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -915,7 +915,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -936,7 +936,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -958,7 +958,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -979,7 +979,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
@@ -1000,7 +1000,7 @@
 								<div class="item-discount">50% giảm</div>
 								<div class="item-content-section">
 									<div class="item-price">58.000đ</div>
-									<div class="item-add-button">Thêm vào giỏ hàng
+									<div class="item-add-button">Thêm vào giỏ
 									</div>
 								</div>
 							</div>
