--- a/Cart.html
+++ b/Cart.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cart</title>
+	<title>Giỏ hàng</title>
 	<link rel="shortcut icon" type="image/jpg" href="assets/photo/shortcut.png"/>
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link rel="stylesheet" href="assets/project/cart/style.css">
@@ -14,8 +14,7 @@
 	<link rel="stylesheet" href="assets/font/themify-icons/themify-icons.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@600&family=Roboto+Slab:wght@700&display=swap"
-		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -58,12 +57,12 @@
 			<div class="cart-container">
 				<div class="sub-nav">
 					<div class="sub-nav-title">
-						<h2 class="content-title">Cart and order</h2>
+						<h2 class="content-title">Giỏ Hàng</h2>
 					</div>
-					<div class="sub-nav-price">Prices</div>
-					<div class="sub-nav-quantity">Quantity</div>
-					<div class="sub-nav-amount">Amount</div>
-					<div class="sub-nav-action">Action</div>
+					<div class="sub-nav-price">Giá</div>
+					<div class="sub-nav-quantity">Số lượng</div>
+					<div class="sub-nav-amount">Thành tiền</div>
+					<div class="sub-nav-action">Thao tác</div>
 				</div>
 				<div id="cart-id" style="display: none">20</div>
 
@@ -92,7 +91,7 @@
 					</div>
 					<div class="book-action">
 						<a class="book-delete-button"
-							href="#">Delete</a>
+							href="#">Xóa</a>
 					</div>
 				</div>
 
@@ -121,7 +120,7 @@
 					</div>
 					<div class="book-action">
 						<a class="book-delete-button"
-							href="#">Delete</a>
+							href="#">Xóa</a>
 					</div>
 				</div>
 
@@ -150,7 +149,7 @@
 					</div>
 					<div class="book-action">
 						<a class="book-delete-button"
-							href="#">Delete</a>
+							href="#">Xóa</a>
 					</div>
 				</div>
 
@@ -186,8 +185,8 @@
 
 				<div class="cart-control">
 					<div class="cart-order">
-						<div class="cart-total-price">Total price (9 items): 148,86$</div>
-						<div class="cart-order-button pointer">Order</div>
+						<div class="cart-total-price">Tổng đơn hàng (9 sản phẩm): 148,86$</div>
+						<div class="cart-order-button pointer">Đặt hàng</div>
 					</div>
 				</div>
 			</div>
