--- a/Product.html
+++ b/Product.html
@@ -248,7 +248,7 @@ LEO VATINO luôn có rất nhiều ƯU ĐÃI - bạn hãy Áp dụng đủ các 
 					</div>
 				</div>
 				<div class="recommended">
-					<div class="recommened-header">
+					<div class="recommended-header">
 						<h2>TOP BÁN CHẠY</h2>
 					</div>
 					<div class="row-item">
